--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -545,7 +545,26 @@ background-clip: text;
 .squares .square-img-container {
   overflow: hidden;
 }
-.squares .square-img-container::after {
+.square-overlay {
+  position: absolute;
+  width: 100%;
+  height: 100%;
+  background: #0000005e;
+  bottom: 100%;
+  right: 100%;
+  z-index: 9;
+  display: flex;
+  justify-content: center;
+  align-items: flex-start;
+  flex-direction: column;
+  color: white;
+  padding-left: 15px;
+}
+.squares .square-img-container:hover .square-overlay {
+  bottom: 0;
+  right: 0;
+}
+/* .squares .square-img-container::after {
   content: 'High Speed';
   display: flex;
   justify-content: center;
@@ -559,11 +578,11 @@ background-clip: text;
   right: 100%;
   bottom: 100%;
   transition: 1s;
-}
-.squares .square-img-container:hover::after {
+} */
+/* .squares .square-img-container:hover::after {
   right: 0%;
   bottom: 0%;
-}
+} */
 .squares .square-img-container:not(.square-img-container.col-img):hover img {
   transition: 2s;
   transform: scale(1.2);
