--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -564,25 +564,6 @@ background-clip: text;
   bottom: 0;
   right: 0;
 }
-/* .squares .square-img-container::after {
-  content: 'High Speed';
-  display: flex;
-  justify-content: center;
-  align-items: center;
-  font-size: 50px;
-  color: white;
-  position: absolute;
-  width: 100%;
-  height: 100%;
-  background: #00000054;
-  right: 100%;
-  bottom: 100%;
-  transition: 1s;
-} */
-/* .squares .square-img-container:hover::after {
-  right: 0%;
-  bottom: 0%;
-} */
 .squares .square-img-container:not(.square-img-container.col-img):hover img {
   transition: 2s;
   transform: scale(1.2);
@@ -690,3 +671,19 @@ footer .input-group button::after {
   }
 }
 /* End Footer */
+
+/* scroll to TOP */
+.scroll-top {
+  width: 50px;
+  height: 50px;
+  position: fixed;
+  right: 10px;
+  bottom: 10px;
+  background-color: var(--text-hover);
+  border-radius: 50%;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  color: white;
+  cursor: pointer;
+}
